agregando js de gestionActividad

--- a/actividades.html
+++ b/actividades.html
@@ -14,13 +14,13 @@
         <h3 id="nombreText"></h3>
         <h3 id="apellidoText"></h3>
         <section>
-            <table class="table-bordered" id="actividadesTb">
-                <thead class="table-encabezado">
+            <table id="actividadesTb">
+                <thead>
                     <tr>
                         <th>ID</th>
                         <th>Descripción</th>
                         <th>Nota</th>
-                        <th></th><!-- Los dos espacios son para el boton modificar y eliminar-->
+                        <th></th>
                         <th></th>
                     </tr>
                 </thead>
