--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     </header>
     <main>
         <section>
-            <table class="table-bordered" id="estudiantesTb">
-                <thead class="table-encabezado">
+            <table id="estudiantesTb">
+                <thead>
                     <tr>
                         <th>Codigo</th>
                         <th>Nombre</th>
                         <th>Apellido</th>
-                        <th></th><!-- Los tres espacios son para el boton modificar, eliminar y notas -->
+                        <th></th>
                         <th></th>
                         <th></th>
                     </tr>
@@ -31,7 +31,7 @@
                 <button id="btnRegistrar">Registrar Estudiante</button>
             </section><br>
         </section>
-        <section>
+        <section id="inputsContainer">
             <h3 id="titulo"></h3>
             <form>
                 <label>
@@ -50,7 +50,7 @@
             </form>
         </section>
     </main>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="js/gestionEstudiante.js"></script>
 </body>
 
